--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,8 @@ python:
 # command to install dependencies
 install: "pip install -r requirements.txt"
 # command to run tests
-script: PYTHONPATH=./src ; python -m unittest discover -s test --pattern=*.py
+script:
+  - export PYTHONPATH=./src:./src/models:./src/align
+  - python -m unittest discover -s test --pattern=*.py
 dist: trusty
 
