--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,6 @@ install: "pip install -r requirements.txt"
 # command to run tests
 script:
   - export PYTHONPATH=./src:./src/models:./src/align
-  - python -m unittest discover -s test --pattern=*.py
+  - python -m unittest discover -s test --pattern=*.py 1>&2
 dist: trusty
 
