--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,11 @@ sudo: required
 python:
   - "2.7"
 # command to install dependencies
-install: "pip install -r requirements.txt"
+install:
+# numpy not using wheel to avoid problem described in 
+#  https://github.com/tensorflow/tensorflow/issues/6968
+  - pip install --no-binary numpy --upgrade numpy
+  - pip install -r requirements.txt
 # command to run tests
 script:
   - export PYTHONPATH=./src:./src/models:./src/align
